# fissure

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yaml  publish-coverage.yaml
spec/: common.thrift  encoding.thrift
src/: encoding.thrift
src/gen-py/common/: constants.py  ttypes.py
tests/: test_basic.py
tools/: coverage_to_md.py
workflows/: python.yaml
