[build-system]
requires = ["setuptools>=61,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fissure"
version = "0.1.0"
description = "RIFT implementation"
authors = [{ name = "Christian Kuhtz", email = "christian@kuhtz.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pylint",
    "mypy",
    "black",
    "genbadge[coverage]"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
